--- a/assets/styles/scss/pages/home-webshop/_section-3--about.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-3--about.scss
@@ -6,8 +6,8 @@
   background: radial-gradient(#003, #000);
 
   &__container {
-    // @include block-flex-container(nowrap, column, center, center);
-    @include block-flex-container(wrap, row, space-evenly, stretch);
+    // @include flex-container(nowrap, column, center, center);
+    @include flex-container(wrap, row, space-evenly, stretch);
 
     // background-color: cornsilk;
     // background: radial-gradient(#003, #000);
