--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1078,10 +1078,11 @@ ul.menu-left.collapse {
   border-radius: 16px;
 }
 
-@media (min-width: 640px) {
+@media (min-width: calc(400px + (0.5rem * 4))) {
   .card {
     min-width: 400px;
     height: 80vh;
+    aspect-ratio: auto 9/16;
   }
 }
 
@@ -1222,14 +1223,17 @@ input:checked + .slider::before {
 *  _button.scss: This partial file contains all 'button' styles.
 \* -------------------------------------------------------------------------- */
 .btn {
-  -ms-flex-preferred-size: auto;
-      flex-basis: auto;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  -ms-flex-negative: 1;
-      flex-shrink: 1;
-  place-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  place-content: space-evenly;
+  place-items: stretch;
   position: relative;
   top: 0;
   padding: 0.25rem;
@@ -1298,6 +1302,14 @@ input:checked + .slider::before {
   height: auto;
   margin: 0;
   font-size: 1.5625rem;
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  place-self: center;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -1456,6 +1468,10 @@ input:checked + .slider::before {
   place-items: stretch;
 }
 
+.hot-item {
+  padding: 0 0 4rem 0;
+}
+
 .hot-item__container {
   position: relative;
 }
@@ -1495,14 +1511,6 @@ input:checked + .slider::before {
   background-color: rgba(0, 0, 0, 0.55);
   -webkit-box-shadow: 0 1px 3px 10px rgba(0, 0, 0, 0.12), 0 1px 2px 5px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px 10px rgba(0, 0, 0, 0.12), 0 1px 2px 5px rgba(0, 0, 0, 0.24);
-  height: 320px;
-}
-
-@media (min-width: 640px) {
-  .hot-item__caption {
-    bottom: calc(320px - (320px / 10));
-    bottom: 0%;
-  }
 }
 
 .hot-item__caption-title {
@@ -1515,7 +1523,7 @@ input:checked + .slider::before {
 
 .hot-item__caption-text {
   overflow: auto;
-  height: calc(320px / 2);
+  height: calc(4rem * 2);
   margin: 1rem 0;
   color: var(--color-background);
 }
@@ -1530,7 +1538,17 @@ input:checked + .slider::before {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  height: 25%;
+}
+
+.hot-item__caption-btn {
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  place-self: center;
 }
 
 .hot-item__container:hover .hot-item__visual {
@@ -1541,7 +1559,7 @@ input:checked + .slider::before {
 }
 
 .hot-item__container:hover .hot-item__caption {
-  bottom: 0;
+  bottom: 0%;
   background-color: rgba(0, 0, 0, 0.85);
   -webkit-box-shadow: 0 19px 38px 20px rgba(0, 0, 0, 0.3), 0 15px 12px 20px rgba(0, 0, 0, 0.22);
           box-shadow: 0 19px 38px 20px rgba(0, 0, 0, 0.3), 0 15px 12px 20px rgba(0, 0, 0, 0.22);
