--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -33,8 +33,8 @@
 
 // -  <<----------<< Flex-Box >>---------->>
 
-// #  Block-Flex-Container
-@mixin block-flex-container(
+// #  flex-container
+@mixin flex-container(
   $wrap: nowrap,
   $direction: column,
   $justify: space-evenly,
