--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -11,15 +11,17 @@
   overflow: hidden;
   min-width: calc(#{$dimension--xxs} - (#{$dimension--xxs} / 10));
   max-width: calc((#{$dimension--l} / 4));
+  // max-height: $card-height;
   aspect-ratio: $card-aspect-ratio;
 
   /* Prevent background color leak outs */
   background-clip: padding-box;
   border-radius: $border-radius--s;
 
-  @include breakpoint(xs) {
+  @include breakpoint(custom, $card-width) {
     min-width: $card-width;
     height: $card-height;
+    aspect-ratio: $card-aspect-ratio;
   }
 
   &:hover {
