--- a/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
@@ -88,7 +88,7 @@
     .hot-item {
       // ...
       &__visual {
-        filter: blur(0.1rem);
+        filter: $filter--dark-blur;
         // background-color: orchid;
         transform: scale(1.25);
       }
