--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1078,10 +1078,11 @@ ul.menu-left.collapse {
   border-radius: 16px;
 }
 
-@media (min-width: calc(400px + (0.5rem * 4))) {
+@media (min-width: 640px) {
   .card {
     min-width: 400px;
     height: 80vh;
+    max-height: 80vh;
     aspect-ratio: auto 9/16;
   }
 }
@@ -1469,7 +1470,7 @@ input:checked + .slider::before {
 }
 
 .hot-item {
-  padding: 0 0 4rem 0;
+  padding: 0 0.5rem 4rem 0.5rem;
 }
 
 .hot-item__container {
@@ -1505,7 +1506,7 @@ input:checked + .slider::before {
   position: absolute;
   z-index: 1;
   right: 0;
-  bottom: 0%;
+  bottom: calc(-4rem * 3 - (0.5rem));
   left: 0;
   padding: 1rem;
   background-color: rgba(0, 0, 0, 0.55);
