--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1337,8 +1337,8 @@ input:checked + .slider::before {
   left: 50%;
   width: 100%;
   max-width: 600px;
-  padding: 5px;
-  border: 2px solid var(--color-tertiary);
+  padding: 0.5rem;
+  border: calc(0.25rem / 2) solid var(--color-tertiary);
   background-color: rgba(0, 0, 0, 0.5);
   -webkit-transform: translate3d(-50%, -50%, 0);
           transform: translate3d(-50%, -50%, 0);
@@ -1346,50 +1346,50 @@ input:checked + .slider::before {
 
 .box-border::before, .box-border::after {
   position: absolute;
-  top: 5px;
-  width: 14px;
-  height: 14px;
-  border: 2px solid var(--color-tertiary);
+  top: 0.5rem;
+  width: 1rem;
+  height: 1rem;
+  border: calc(0.25rem / 2) solid var(--color-tertiary);
   color: var(--color-tertiary);
   content: '•';
-  font-size: 14px;
-  line-height: 12px;
+  font-size: 1rem;
+  line-height: calc(1rem - 0.25rem);
   text-align: center;
 }
 
 .box-border::before {
-  left: 5px;
+  left: 0.5rem;
 }
 
 .box-border::after {
-  right: 5px;
+  right: 0.5rem;
 }
 
 .box-border .box-border-inner {
   position: relative;
   padding: 0.5rem;
-  border: 2px solid var(--color-tertiary);
+  border: calc(0.25rem / 2) solid var(--color-tertiary);
 }
 
 .box-border .box-border-inner::before, .box-border .box-border-inner::after {
   position: absolute;
-  bottom: -2px;
-  width: 14px;
-  height: 14px;
-  border: 2px solid var(--color-tertiary);
+  bottom: calc(-0.25rem / 2);
+  width: 1rem;
+  height: 1rem;
+  border: calc(0.25rem / 2) solid var(--color-tertiary);
   color: var(--color-tertiary);
   content: '•';
-  font-size: 14px;
-  line-height: 12px;
+  font-size: 1rem;
+  line-height: calc(1rem - 0.25rem);
   text-align: center;
 }
 
 .box-border .box-border-inner::before {
-  left: -2px;
+  left: calc(-0.25rem / 2);
 }
 
 .box-border .box-border-inner::after {
-  right: -2px;
+  right: calc(-0.25rem / 2);
 }
 
 /* ========================================================================== *\
@@ -1607,6 +1607,21 @@ input:checked + .slider::before {
   padding: 0;
 }
 
+.about__outer-border {
+  min-width: calc(320px - (320px / 10));
+  max-width: calc((1600px / 4));
+  aspect-ratio: auto 9/16;
+}
+
+@media (min-width: 640px) {
+  .about__outer-border {
+    min-width: 400px;
+    height: 80vh;
+    max-height: 80vh;
+    aspect-ratio: auto 9/16;
+  }
+}
+
 .about__title--text {
   padding: 0.5rem 0;
 }
@@ -1618,7 +1633,7 @@ input:checked + .slider::before {
 
 .about__paragraph {
   overflow: auto;
-  height: calc(320px / 1);
+  height: calc(80vh - (4rem * 3));
   color: var(--color-background);
 }
 
