--- a/assets/styles/scss/components/_box-border - Copy.scss
+++ b/assets/styles/scss/components/_box-border - Copy.scss
@@ -8,58 +8,58 @@
   left: 50%;
   width: 100%;
   max-width: 600px;
-  padding: $buffer--xs;
-  border: calc(#{$buffer--xxs} / 2) solid var(--color-tertiary);
+  padding: 5px;
+  border: 2px solid var(--color-tertiary);
   background-color: rgba(#000, 0.5);
   transform: translate3d(-50%, -50%, 0);
 
   &::before,
   &::after {
     position: absolute;
-    top: $buffer--xs;
-    width: $buffer--s;
-    height: $buffer--s;
-    border: calc(#{$buffer--xxs} / 2) solid var(--color-tertiary);
+    top: 5px;
+    width: 14px;
+    height: 14px;
+    border: 2px solid var(--color-tertiary);
     color: var(--color-tertiary);
     content: '•';
-    font-size: $buffer--s;
-    line-height: calc(#{$buffer--s} - #{$buffer--xxs});
+    font-size: 14px;
+    line-height: 12px;
     text-align: center;
   }
 
   &::before {
-    left: $buffer--xs;
+    left: 5px;
   }
 
   &::after {
-    right: $buffer--xs;
+    right: 5px;
   }
 
   .box-border-inner {
     position: relative;
     padding: $buffer--xs;
-    border: calc(#{$buffer--xxs} / 2) solid var(--color-tertiary);
+    border: 2px solid var(--color-tertiary);
 
     &::before,
     &::after {
       position: absolute;
-      bottom: calc(-#{$buffer--xxs} / 2);
-      width: $buffer--s;
-      height: $buffer--s;
-      border: calc(#{$buffer--xxs} / 2) solid var(--color-tertiary);
+      bottom: -2px;
+      width: 14px;
+      height: 14px;
+      border: 2px solid var(--color-tertiary);
       color: var(--color-tertiary);
       content: '•';
-      font-size: $buffer--s;
-      line-height: calc(#{$buffer--s} - #{$buffer--xxs});
+      font-size: 14px;
+      line-height: 12px;
       text-align: center;
     }
 
     &::before {
-      left: calc(-#{$buffer--xxs} / 2);
+      left: -2px;
     }
 
     &::after {
-      right: calc(-#{$buffer--xxs} / 2);
+      right: -2px;
     }
   }
 }
