--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -60,7 +60,7 @@
     // ! REFERENCE: <https://developer.mozilla.org/en-US/docs/Web/HTML/Element#href>
 
     // -  <<----------<< (1) Content Sectioning: Block >>---------->>
-    // div,
+    div,
     address,
     article,
     aside,
