style-main: updating v21

--- a/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-2--hot-items.scss
@@ -5,7 +5,11 @@
 .hot-items {
   &__container {
     @include dimensions;
-    @include flex-container(wrap, row, space-evenly, stretch);
+    @include flex-container(nowrap, column, center, center);
+
+    @include breakpoint(s) {
+      @include flex-container(wrap, row, space-evenly, stretch);
+    }
   }
 
   &__title {
