--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1334,7 +1334,6 @@ input:checked + .slider::before {
 .box-border {
   position: relative;
   top: 50%;
-  top: calc(50% + 4rem);
   left: 50%;
   width: 100%;
   height: auto;
@@ -1461,14 +1460,30 @@ input:checked + .slider::before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  place-content: space-evenly;
-  place-items: stretch;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  place-content: center;
+  place-items: center;
+}
+
+@media (min-width: 960px) {
+  .hot-items__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    place-content: space-evenly;
+    place-items: stretch;
+  }
 }
 
 .hot-item {
@@ -1595,8 +1610,8 @@ input:checked + .slider::before {
           flex-direction: column;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-  place-content: space-evenly;
-  place-items: stretch;
+  place-content: center;
+  place-items: center;
 }
 
 @media (min-width: 960px) {
@@ -1620,51 +1635,58 @@ input:checked + .slider::before {
 }
 
 .about__container--text {
-  position: relative;
-  top: 50%;
-  left: 0%;
   min-width: calc(320px - 2rem);
   max-width: calc(400px + 1rem);
-  height: 80vh;
-  padding: 0 0.5rem 4rem 0.5rem;
+  padding: 0;
 }
 
 @media (min-width: 640px) {
   .about__container--text {
-    min-width: 400px;
-    height: 80vh;
-    max-height: 80vh;
-    aspect-ratio: auto 9/16;
+    background-color: teal;
+    color: teal;
   }
 }
 
 @media (min-width: 960px) {
   .about__container--text {
-    min-width: calc(400px + (400px / 2));
-    color: red;
     background-color: red;
+    color: red;
   }
 }
 
 @media (min-width: 1280px) {
   .about__container--text {
-    min-width: calc(400px * 2);
-    color: green;
     background-color: green;
+    color: green;
   }
+}
+
+.about__outer-border {
+  top: calc((80vh / 2) + 0.5rem);
 }
 
 @media (min-width: 640px) {
   .about__outer-border {
-    min-width: 400px;
-    max-height: 80vh;
+    top: calc((80vh / 2) + 1.5rem);
+  }
+}
+
+@media (min-width: 960px) {
+  .about__outer-border {
+    top: calc((80vh / 2) - 2rem);
+  }
+}
+
+@media (min-width: 960px) {
+  .about__inner-border {
+    height: calc(80vh - 1.5rem);
   }
 }
 
 .about__title--text {
   padding: 1rem 0;
-  font-variant: small-caps;
   font-size: 1.95312rem;
+  font-variant: small-caps;
 }
 
 .about__sub-title {
@@ -1674,9 +1696,15 @@ input:checked + .slider::before {
 
 .about__paragraph {
   overflow: auto;
-  height: calc(80vh - (3rem * 4));
   color: var(--color-background);
   text-align: justify;
+  height: calc(80vh - (1rem * 10));
+}
+
+@media (min-width: 960px) {
+  .about__paragraph {
+    height: 70%;
+  }
 }
 
 /* -------------------------------------------------------------------------- *\
