--- a/assets/styles/scss/components/_box-border.scss
+++ b/assets/styles/scss/components/_box-border.scss
@@ -7,7 +7,7 @@
   top: 50%;
   left: 50%;
   width: 100%;
-  height: auto;
+  // height: auto;
   padding: $buffer--xs;
   border: calc(#{$buffer--xxs} / 2) solid var(--color-tertiary);
   background-color: rgba(#000, 0.5);
